--- a/ConsolaWEB/style.css
+++ b/ConsolaWEB/style.css
@@ -17,8 +17,8 @@ ul#menu li {
   text-indent: -9999px;
   position: relative;
   display: inline-block;
-  width: 200px;
-  height: 159px;
+  width: 350px;
+  height: 300px;
   margin-right: -70px;
   -moz-background-size: contain;
   -webkit-background-size: contain;
@@ -33,7 +33,7 @@ ul#menu li {
   -webkit-transition: all .45s;
   transition: all .45s;
   opacity: .8;
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.4), 0 0 30px rgba(0,0,0,0.2);
+  
 }
 
 ul#menu li:last-child,
@@ -104,7 +104,7 @@ ul#menu li:after {
   content: "";
   width: 200px;
   height: 20px;
-  background: rgba(255,255,255,.5);
+  
   /*background-image: url(tables.jpg);
 	-moz-background-size: contain;
   -webkit-background-size: contain;
@@ -122,12 +122,20 @@ ul#menu li:after {
 body {
   text-align: center;
   margin: 0 auto;
+  background-color: rgb(70, 62, 62);
+  
 }
 
 .bg {
   background: transparent url(bg.jpg) center 0 no-repeat;
-  min-height: 450px;
+  min-height: 1000px;
   padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  
+  
 }
 
 .hide {
